update parsing of messages
